# gestion-stock

Documents/delka-medias-gestion/: .env.example  README.md  index.html  package.json
Documents/delka-medias-gestion/src/: App.jsx  main.jsx
Documents/delka-medias-gestion/src/styles/: auth.css  (+2 more)
Documents/gestion-stock/: .gitignore  README.md
Documents/gestion-stock/cpp-version/: CMakeLists.txt  build.bat  build.sh
Documents/gestion-stock/cpp-version/include/models/: Categorie.hpp  MouvementStock.hpp  Produit.hpp  TypeMouvement.hpp
Documents/gestion-stock/cpp-version/include/repository/: MouvementRepository.hpp  ProduitRepository.hpp
Documents/gestion-stock/cpp-version/include/service/: RapportService.hpp  StockService.hpp
Documents/gestion-stock/cpp-version/include/ui/: ConsoleUI.hpp
Documents/gestion-stock/cpp-version/src/: CMakeLists.txt  main.cpp
Documents/gestion-stock/cpp-version/src/models/: Categorie.cpp  MouvementStock.cpp  Produit.cpp
Documents/gestion-stock/cpp-version/src/repository/: MouvementRepository.cpp  ProduitRepository.cpp
Documents/gestion-stock/cpp-version/src/service/: RapportService.cpp  StockService.cpp
Documents/gestion-stock/cpp-version/src/ui/: ConsoleUI.cpp
Documents/gestion-stock/web-version/: app.js  package.json  render.yaml
Documents/simulateur_ordonnancement/simulateur-console/: Makefile  Process.cpp  Process.hpp  ProcessQueue.hpp  Scheduler.cpp  Scheduler.hpp  Simulator.cpp  Simulator.hpp  main.cpp
Documents/tomy/: contact.html  gateaux.html  index.html  salades.html  sandwiches.html  services.html  tartes.html
(+44 files in other folders)
